--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQL_EXPRESS;Initial Catalog=FlightsApp; Integrated Security=true;"
+  }
 }
