--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -1,14 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQL_EXPRESS;Initial Catalog=FlightsApp; Integrated Security=true;"
-  }
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=.\\SQL_EXPRESS;Initial Catalog=FlightsApp; Integrated Security=true;"
+	},
+	"AuthSettings": {
+		"Key": "vEkOUbQDjHIUlBnlUaPEItq0cXW1RrpbKQF8q9Pf73hV98fN",
+		"Audience": "http://localhost:62352",
+		"Issuer": "http://localhost:62352"
+	}
 }
