enabling and configuring cors policy for cookie exchange

--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -1,19 +1,22 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft": "Warning",
-			"Microsoft.Hosting.Lifetime": "Information"
-		}
-	},
-	"AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
 
-	"ConnectionStrings": {
-		"DefaultConnection": "Server=.\\SQL_EXPRESS;Initial Catalog=FlightsApp; Integrated Security=true;"
-	},
-	"AuthSettings": {
-		"Key": "vEkOUbQDjHIUlBnlUaPEItq0cXW1RrpbKQF8q9Pf73hV98fN",
-		"Audience": "http://localhost:62352",
-		"Issuer": "http://localhost:62352"
-	}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQL_EXPRESS;Initial Catalog=FlightsApp; Integrated Security=true;"
+  },
+  "AuthSettings": {
+    "Key": "vEkOUbQDjHIUlBnlUaPEItq0cXW1RrpbKQF8q9Pf73hV98fN", // jwt encryption key
+    "Issuer": "http://localhost:62352", // server address
+    "TokenLifeTimeInMinutes":  120
+  },
+  "Clients": {
+    "SpaAddress": "https://localhost:3000"
+  }
 }
