little fix for cors policy

--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -17,6 +17,6 @@
     "TokenLifeTimeInMinutes":  120
   },
   "Clients": {
-    "SpaAddress": "https://localhost:3000"
+    "SpaAddress": "http://localhost:8080"
   }
 }
